--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.log
 
 # Created by https://www.toptal.com/developers/gitignore/api/maven,intellij+all,windows,linux,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,intellij+all,windows,linux,macos
